--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
   <property name="build.sysclasspath" value="ignore"/>
   <property file="build.properties"/>
 
-  <property name="description" value="ZeroConf API"/>
+  <property name="description" value="Zeroconf API"/>
   <property name="dist" value="dist"/>		        <!-- where to build the Jars -->
   <property name="classes.main" value="build/main"/>	<!-- where to compile the classes -->
   <property name="docs" value="docs"/>
